--- a/final report.tex
+++ b/final report.tex
@@ -1514,7 +1514,7 @@ Though this model turned out to be too simplified to produce the exact result it
 
 After regarding the simple geometrical model we were able to generalize the result for any kind of graph with any kind of correlation. Theoretical results were then validated with the numerous experiments. For the experiments we used the synthetic networks with values generated according to created model and real data from the school survey Add Health and Project 90.
 
-Finally, we compared two estimators: Sample average and Volz-Hechathon estimator. The exact error for different scenarios of enhanced RDS method was found only for Sample average estimator. However, experiments showed that also VHE benefits from this enhancement of RDS. After comparison VHE and SA extimator we came to the following conclusion: for the attributes that are correlated with the degree of the node the Volz-Hechathon estimator will produce more correct results. In the cases when there is no such correlation sample average performs better.
+Finally, we compared two estimators: Sample average and Volz-Hechathon estimator. The exact error for different scenarios of enhanced RDS method was found only for Sample average estimator. However, experiments showed that also VHE benefits from this enhancement of RDS. After comparison VHE and SA extimator we came to the following conclusion: for the attributes that are correlated with the degree of the node the Volz-Hechathon estimator will produce more correct results. In the cases when there is no such correlation Sample average performs better. We saw that both estimators benefit from the introduced enhanced RDS method.
 
 
 \bibliographystyle{plain}
