--- a/final report.tex
+++ b/final report.tex
@@ -1516,6 +1516,7 @@ After regarding the simple geometrical model we were able to generalize the resu
 
 Finally, we compared two estimators: Sample average and Volz-Hechathon estimator. The exact error for different scenarios of enhanced RDS method was found only for Sample average estimator. However, experiments showed that also VHE benefits from this enhancement of RDS. After comparison VHE and SA extimator we came to the following conclusion: for the attributes that are correlated with the degree of the node the Volz-Hechathon estimator will produce more correct results. In the cases when there is no such correlation Sample average performs better. We saw that both estimators benefit from the introduced enhanced RDS method.
 
+In any case, using any estimator, the enhanced RDS technique shows better results than the standard RDS, especially when the level of homophily is high. Regarding that the real networks show the presence of this property the enhanced RDS technique can reduce the error of the estimates.
 
 \bibliographystyle{plain}
 \bibliography{rds}
